--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main>
       <section class="container">
         <div class="row p-5">
+          <!-- ipad image -->
           <div class="col-6 col-md-6 col-sm-12 col-lg-6">
             <img src="images/mac.png" alt="" srcset="" class="img-fluid w-75" />
           </div>
@@ -31,6 +32,8 @@
                 256GB solid state driv
               </p>
             </div>
+
+            <!-- Memory section -->
             <div>
               <h3>Memory</h3>
               <div class="row">
@@ -55,6 +58,7 @@
                 </div>
               </div>
             </div>
+            <!-- storage  -->
             <div>
               <h3>Storage</h3>
               <div class="row">
@@ -88,7 +92,7 @@
                 </div>
               </div>
             </div>
-
+            <!-- choose storage section -->
             <div>
               <h3>Choose your storage</h3>
               <div class="row">
@@ -172,8 +176,7 @@
         </div>
       </section>
     </main>
-
-    <script
+<script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
